tests/codegen-anf/pass/014-sc-and.hyg
assert(true && 3 < 5)