tests/codegen-anf/fail/003-xor.hyg
assert(
    (true xor true) or
    (true xor true xor true xor true)
)